# ComputerGraphicCourse

./: README.md
lab3/: CMakeLists.txt  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Point.cpp  Point.h  main.cpp
lab4/: ActiveEdgeList.cpp  ActiveEdgeList.h  CMakeLists.txt  Edge.cpp  Edge.h  Point.cpp  Point.h  Rasterisation.cpp  Rasterisation.h  YGroup.cpp  YGroup.h  main.cpp
lab5/: CMakeLists.txt  Clipping.cpp  Clipping.h  Edge.cpp  Edge.h  Point.cpp  Point.h  main.cpp
lab6/: CMakeLists.txt  Cylinder.cpp  Cylinder.h  MyVector.cpp  MyVector.h  Point.cpp  Point.h  Vertex.cpp  Vertex.h  data.txt  main.cpp
lab7/: CMakeLists.txt  Cylinder.cpp  Cylinder.h  Point.cpp  Point.h  Vertex.cpp  Vertex.h  data.txt  defs.h  main.cpp
lab8/: CMakeLists.txt  Cube.cpp  Cube.h  main.cpp
